auto start cncr
